--- a/style.css
+++ b/style.css
@@ -26,3 +26,10 @@ div {
     font-family: "Saira", sans-serif;
     text-align: center
 }
+
+ul {
+    max-width: 800px;
+    color: gray;
+    font-family: "Saira", sans-serif;
+    text-align: center
+}
